--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.24.0",
     "list": "^2.0.19",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.18.0",
-    "react-redux": "^7.2.3",
+    "react-redux": "^7.2.6",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.2"
   },
